# a-star--pathfinding-algorithm

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  build.sh
src/: main.cpp
src/core/: heuristic.hpp  node.hpp
src/core/astar/: astar.cpp  astar.hpp  reconstruct_path.hpp  search_result.hpp
src/core/grid/: GridLocation.hpp  grid.cpp  grid.hpp
src/utils/: log.cpp  log.hpp
src/visualization/: renderer.cpp  renderer.hpp
